K3S/example-wordpress-secrets.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: wordpress
