K3S/ingress-nginx.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress
  labels:
    kubernetes.io/metadata.name: nginx-ingress
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: nginx.org/ingress-controller
---
apiVersion: v1
kind: Service
metadata:
  name: omada-wireguard-proxy
  namespace: nginx-ingress
spec:
  ports:
  - port: 51820
    protocol: UDP
    targetPort: 51820
    name: wireguard
---
apiVersion: v1
kind: Endpoints
metadata:
  name: omada-wireguard-proxy
  namespace: nginx-ingress
subsets:
  - addresses:
      - ip: 10.50.1.1
    ports:
      - port: 51820
        protocol: UDP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress
  namespace: nginx-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
    spec:
      serviceAccountName: nginx-ingress
      containers:
      - image: nginx/nginx-ingress:3.5.0
        name: nginx-ingress
        args:
          - -ingress-class=nginx
          - -enable-custom-resources
          - -enable-snippets
          - -nginx-configmaps=$(POD_NAMESPACE)/nginx-config
          - -global-configuration=$(POD_NAMESPACE)/nginx-configuration
          - -enable-leader-election=false
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        - name: wireguard-udp
          containerPort: 51820
          protocol: UDP
        securityContext:
          allowPrivilegeEscalation: true
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL
          runAsUser: 101
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  namespace: nginx-ingress
  annotations:
    metallb.universe.tf/allow-shared-ip: "ingress-services"
spec:
  loadBalancerIP: 10.50.1.204
  externalTrafficPolicy: Local
  type: LoadBalancer
  selector:
    app: nginx-ingress
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  - name: wireguard-udp
    port: 443 
    protocol: UDP
    targetPort: 51820
