K3S/longhorn-expose-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: longhorn-ui-expose
  namespace: longhorn-system
  labels:
    app: longhorn-ui
spec:
  selector:
    app: longhorn-ui
  type: LoadBalancer
  loadBalancerIP: 10.50.1.202
  ports:
    - port: 80
      targetPort: 8000
---
