K3S/wordpress-cert.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: wordpress-test
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql
  namespace: wordpress-test
  labels:
    app: wordpress
spec:
  ports:
    - port: 3306
  selector:
    app: wordpress
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-mysql
  namespace: wordpress-test
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: mysql
    spec:
      containers:
      - image: mysql:8.0.27
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage-test
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage-test
        persistentVolumeClaim:
          claimName: mysql-pv-claim-test
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-external
  namespace: wordpress-test
  labels:
    app: wordpress
spec:
  selector:
    app: wordpress
    tier: frontend
  type: LoadBalancer
  loadBalancerIP: 192.168.86.203
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress-test
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - image: wordpress:5.8.2-apache
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: wordpress-persistent-storage-test
          mountPath: /var/www/html
      volumes:
      - name: wordpress-persistent-storage-test
        persistentVolumeClaim:
          claimName: wp-pv-claim-test
---
