K3S/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wordpress
  namespace: wordpress-test
spec:
  ingressClassName: nginx
  rules:
  - host: "test"
    http:
      paths:
      - pathType: Prefix
        path: /*
        backend:
          service:
            name: wordpress-external
            port:
              number: 80
---
